--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-form": "^6.6.3",
+    "redux-form-website-template": "0.0.41"
   },
   "devDependencies": {
     "babel-core": "^6.13.2",
+    "babel-polyfill": "^6.0.16",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
